name:                rereddit
version:             1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/hlian/rereddit
license:             BSD3
author:              Hao Lian
maintainer:          hi@haolian.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Rereddit.Happy
                       Network.Rereddit.FileCache
  build-depends:       base >= 4.7 && < 5
                     , base-prelude
                     , bytestring
                     , directory
                     , filepath
                     , HandsomeSoup
                     , hxt
                     , lens
                     , lens-aeson
                     , text
                     , transformers
                     , wreq
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
source-repository head
  type:     git
  location: https://github.com/name/project
